--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="author" content="Luciano Cabello">
     <meta name="description" content="Colorize es una web en la cual podes averiguar los codigos de los colores, ademas de poder determinar el color de una imagen">
     <meta name="keywords" content="colores, almacenamiento, herramienta"/>
-    <title>Colorize 🎨</title>
+    <title>Colorize</title>
   </head>
   <body>
     <div id="root"></div>
